--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 flask-restful = "*"
 db-sqlite3 = "*"
 sqlalchemy = "*"
+sqlalchemy-migrate = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
